tests/testcases/errors/BCE0022-15-strict.boo
"""
BCE0022-15-strict.boo(5,15): BCE0022: Cannot convert 'object' to 'string'.
"""
a = object()
s as string = a

[assembly: StrictMode]
